fix background overlay not stretching over full height if scrollbar present

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ html:before {
   background-color: rgba(0, 0, 0, 0.65);
   content: "";
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
